@@ -18,6 +18,8 @@ Babej).
 - Show the active context in "context list", if any is active.
 - Fix "task edit" dropping annotation text after newlines.
 - Removed obsolete script 'context'.
+- Fix "project" verbosity info not showing without "footnote" being manually
+enabled.
 
 ------ current release ---------------------------
 
